--- a/camera/.project
+++ b/camera/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>camera</name>
+	<name>android_urb_camera</name>
 	<comment></comment>
 	<projects>
 	</projects>
