--- a/camera/AndroidManifest.xml
+++ b/camera/AndroidManifest.xml
@@ -10,7 +10,9 @@
 
     <application
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
+        android:icon="@drawable/ic_launcher"
+        android:largeHeap="true"
+        >
         <activity
             android:name="CameraActivity"
             android:label="@string/app_name">
